--- a/release-notes/2.0.md
+++ b/release-notes/2.0.md
@@ -31,11 +31,11 @@ Enhancements available with the 2.0 release of SCIM Connector:
    * Leverages Secret Server authetication
    * SCIM connector secret automatically added in Secret Server
    * SCIM connector access controlled by Secret Server secret workflow
-   * Default timeout extended to 60 minutes from 20 minutes 
+   * Default timeout extended to 60 minutes from 20 minutes
 
 ## Bug Fixes
 
-Listed below are the bugs that have been addressed in this release. The description below reflects the product behavior prior to the fix and specific details about the fix for some of the items.
+Listed below are the bugs that have been addressed in this release.
 
 * When PowerShell version was not 5.0 or greater:
    * Server 2012 R2 WebSocket was not enabled
