--- a/release-notes/2.5.md
+++ b/release-notes/2.5.md
@@ -1,7 +1,9 @@
-[title]: # (3.0)
+[title]: # (2.5)
 [tags]: # (scim)
-[priority]: # (30098)
-# 3.0 Release Notes
+[priority]: # (30097)
+# 2.5 Release Notes
+
+_December 1st, 2020:_
 
 ## Upgrade and installation notes
 
@@ -9,22 +11,22 @@
 * The new installer has added Flexibility for installation. i.e. the user can customize the installer.
 * The user has the choice to install SCIMConnector as a new website or use the default website in IIS.
 * You can now create a new self-signed certificate for the new website option if the certificate is not available.
-* If a new certificate is created then it will create .pfx and .cer file in %TEMP% directory and password required to import the certificate(using .pfx file) will stored under installation directory(e.g C:\inetpub\wwwroot\SCIMCoonector\scimCertPWD.txt). 
-The backup of Web.config and settings.enc file has been taken to retain the user's previous settings of SCIM endpoints.
+* If a new certificate is created then it will create .pfx and .cer file in %TEMP% directory and password required to import the certificate (using .pfx file) will stored under installation directory (e.g C:\inetpub\wwwroot\SCIMCoonector\scimCertPWD.txt).
+* The backup of Web.config and settings.enc file has been taken to retain the user's previous settings of SCIM endpoints.
 
 ## Enhancements
 
-__Logging__
+### Logging
 
 * Enhanced the logging mechanism to log every error and write the error message we receive from Secret Server. The existing logs were are not descriptive enough and didn't report every error in the logs files. Now for every call that is made will be logged as a response and the text that is received from Secret Server.
 
-__API__
+### API
 
 * When a filter is included in the API call and the filter includes a complex object if the sender does not identify the complex object identifier, assume the identifier is .value. For instance, in the filter string, a query for containers should include the complex object identifier (e.g container.name, container.value, etc...) When a call does not include the identifier, assume the identifier is ".value"  (e.g. container eq 1 will assumed to be container.value eq 1).
 
 * When a container parent value comes empty or null in the API call of post container then assume the value is "-1" that is the default is the root level folder. Without a default, the folder doesn't get created, so adding a default.
 
-__UI__
+### UI
 
 * Removed the "requirement" to create a workflow while adding an application account to SCIM.
 * The GUI of the Advanced Tab has been updated.
