#216072: last move for scim 2.5 updated

--- a/release-notes/2.5.md
+++ b/release-notes/2.5.md
@@ -13,6 +13,7 @@ _December 1st, 2020:_
 * You can now create a new self-signed certificate for the new website option if the certificate is not available.
 * If a new certificate is created then it will create .pfx and .cer file in %TEMP% directory and password required to import the certificate (using .pfx file) will stored under installation directory (e.g C:\inetpub\wwwroot\SCIMCoonector\scimCertPWD.txt).
 * The backup of Web.config and settings.enc file has been taken to retain the user's previous settings of SCIM endpoints.
+* For security reasons, application tokens are invalidated during upgrades.  Access Tokens need to be regenerated and SCIM Endpoints need to be updated.
 
 ## Enhancements
 
@@ -32,6 +33,8 @@ _December 1st, 2020:_
 * The GUI of the Advanced Tab has been updated.
 * The Secret Server URL field has been changed to a drop-down to select Secret Server on the login page of SCIM.
 * A progress indicator/ spinner has been added while retrieving endpoints from Secret Server and while logging into SCIM.
+* The SCIM Connector Configuration Settings view allows the SCIM Connector administrator to adjust global settings.
+* The SCIM Connector now allows users to map endpoint container permissions (folder permissions) to Secret Server Permissions.
 
 ## Bug Fixes
 
